--- a/UI/styles/main.css
+++ b/UI/styles/main.css
@@ -99,7 +99,49 @@ header li{
   text-align: center;
 }
 
+.page-content{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
+}
+.profile-info{
+  grid-column-start: 1;
+  grid-column-end: 2;
+  min-height: 100px;
+  background : red;
+  padding: 10px;
+}
 
+.profile-photo-container{
+   
+   margin-left: 10px;
+   width:80px;
+   min-height: 80px;
+   border-radius: 50%;
+   text-align: center;
+   align-content: center;
+   align-items: center;
+   -moz-border-radius: 50%;
+   -webkit-border-radius: 50%;
+    background-image: url(../images/mr-bean-dummy.jpg);
+     background-position:50% 50%;
+    background-repeat:no-repeat;  
+}
+
+.profile-photo-container img{
+  max-height: 100%;
+  max-width: 100%;
+
+}
+
+.attendant-content{
+  grid-column-start: 2;
+  grid-column-end: 6;
+  height: 100px;
+  background: blue;
+
+
+}
 /* footer */
 
 footer{
@@ -108,6 +150,8 @@ footer{
   text-align: center;
   padding: 15px;
 }
+
+
 
 @media screen and (min-width:450px){
 
