Add action buttons for admin user

--- a/UI/styles/main.css
+++ b/UI/styles/main.css
@@ -67,9 +67,10 @@ hr{
   z-index: 1;
 }
 
-.tooltip:hover .tooltiptext {
+.tooltip:hover, .tooltip:active .tooltiptext {
   visibility: visible;
 }
+
 .dropdown:hover .profile-info{
   display: block;
   background: #fff;
@@ -86,7 +87,7 @@ hr{
   background-color: rgba(0,0,0,0.4);
   left: 0;
   top: 0;
-  position: absolute;
+  position: fixed;
 }
 
 #dialog-box{
@@ -121,7 +122,7 @@ hr{
   margin-right: auto;
 }
 
-.confirm, .cancel{
+.confirm, .cancel, .delete, .modify{
 
  border-radius: 4px;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
@@ -129,10 +130,14 @@ hr{
  height: 35px;
  width:100px;
 }
-.confirm{
+.confirm, .modify{
  color: #fff;
  background:#795548;
  
+}
+
+.delete{
+  background:red;
 }
 #dialog-box .cancel{
  background:#BDBDBD;
@@ -278,7 +283,7 @@ header li{
   flex-direction: row;
   align-items: center;
   align-content: center;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
