--- a/UI/styles/main.css
+++ b/UI/styles/main.css
@@ -67,7 +67,10 @@ hr{
   z-index: 1;
 }
 
-.tooltip:hover, .tooltip:active .tooltiptext {
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+.tooltip:active .tooltiptext{
   visibility: visible;
 }
 
@@ -97,7 +100,7 @@ hr{
   transform: translateY(-50%);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   background-color: #fefefe;
   padding: 20px;
