--- a/UI/styles/main.css
+++ b/UI/styles/main.css
@@ -100,7 +100,7 @@ hr{
   transform: translateY(-50%);
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   background-color: #fefefe;
   padding: 20px;
