--- a/UI/styles/main.css
+++ b/UI/styles/main.css
@@ -1,15 +1,24 @@
 /* global */
-body{
+html, body{
   margin:0;
   padding:0;
-  min-height: 500px;
+  width: 100%;
   background: url('../images/background.jpg') no-repeat;
   background-size: cover;
   background-position: center;
-  width: 100%;
+  height: 100%;
 
 }
 
+#cover{
+  min-height:100%;
+   position:relative;
+}
+.cont{
+  padding:10px;
+  padding-bottom:60px; 
+  height:100%;  
+}
 .container{
   width: 80%;
   overflow: auto;
@@ -322,11 +331,15 @@ header li{
 }
 /* footer */
 
+
 footer{
   background: #00796B;
   color: #fff;
   text-align: center;
-  padding: 15px;
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:60px;
 }
 
 
