--- a/UI/styles/main.css
+++ b/UI/styles/main.css
@@ -3,16 +3,14 @@ html, body{
   margin:0;
   padding:0;
   width: 100%;
-  background: url('../images/background.jpg') no-repeat;
-  background-size: cover;
-  background-position: center;
+  background: #e1e1e1;;
   height: 100%;
 
 }
 
 #cover{
   min-height:100%;
-   position:relative;
+  position:relative;
 }
 .cont{
   padding:10px;
@@ -33,7 +31,7 @@ input[type="password"], [type="email"], [type="text"], [type="number"]{
 }
 
 button[type="submit"]{
-  background:#795548;
+  background:#e8491d;
   color: #fff;
   width:80%;
   height:35px;
@@ -144,7 +142,7 @@ hr{
 }
 .confirm, .modify{
  color: #fff;
- background:#795548;
+ background:#e8491d;;
  
 }
 
@@ -156,13 +154,13 @@ hr{
 }
 /* header */
 header{
-
-  background: #00796B;
+  
+  background: #35424a; 
   color: #fff;
   padding:10px;
   min-height: 60px;
   border-bottom: 5px solid;
-  border-color: #BDBDBD;
+  border-color: #e8491d;
   border-width: 5px;
 }
 
@@ -199,13 +197,11 @@ header li{
 #user-form{
   margin-right: 15px;
   margin-top: 50px;
-  background: #00796B;
-  color: #fff;
+  background: #e1e1e1; 
+  border-width: 5px; 10;
+  color: #000;
   padding:15px;
   min-height: 80px;
-  border: 5px solid;
-  border-color: #BDBDBD;
-  border-width: 5px;
   margin-left: 5px;
   margin-bottom: 150px;
 }
@@ -233,7 +229,7 @@ header li{
   position: absolute;
   z-index: 1;
   min-height: 100px;
-  background : #B2DFDB;
+  background : #e1e1e1;
   padding: 10px;
   border-right: 2px solid #BDBDBD ;
 }
@@ -256,7 +252,7 @@ header li{
 }
 
 .attendant-content{
-  background : #B2DFDB;
+  background : #e1e1e1;
   grid-column-start: 1;
   grid-column-end: 6;
   min-height: 500px;
@@ -333,7 +329,7 @@ header li{
 
 
 footer{
-  background: #00796B;
+  background: #35424a; 
   color: #fff;
   text-align: center;
   position:absolute;
