--- a/UI/styles/main.css
+++ b/UI/styles/main.css
@@ -197,7 +197,7 @@ header li{
 #user-form{
   margin-right: 15px;
   margin-top: 50px;
-  background: #e1e1e1; 
+  background: #fff; 
   border-width: 5px; 10;
   color: #000;
   padding:15px;
@@ -231,7 +231,6 @@ header li{
   min-height: 100px;
   background : #e1e1e1;
   padding: 10px;
-  border-right: 2px solid #BDBDBD ;
 }
 
 .profile-photo-container{
@@ -256,7 +255,6 @@ header li{
   grid-column-start: 1;
   grid-column-end: 6;
   min-height: 500px;
-  border-left: 2px solid #BDBDBD ;
 
 }
 
