--- a/UI/styles/main.css
+++ b/UI/styles/main.css
@@ -41,6 +41,8 @@ button[type="submit"]{
 .label{
   padding: 5px;
   color: #757575;
+  font-size: 17px;
+  font-weight: bold;
 }
 
 .details{
@@ -231,6 +233,8 @@ header li{
   min-height: 100px;
   background : #f4f4f4;
   padding: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .profile-photo-container{
@@ -270,9 +274,16 @@ header li{
   text-transform: uppercase;
   font-size: 12px;
 }
+
+.attendant-content .tip{
+  font-size: 14px;
+  font-weight: bold;
+}
 .attendant-content nav a {
   text-decoration: none;
   color: #795548;
+  font-family: sans-serif;
+  font-size: 18px;
 }
 .wrapper{
   height: 500px;
@@ -287,8 +298,8 @@ header li{
   display: flex;
   flex-direction: row;
   align-items: center;
-  align-content: center;
-  justify-content: center;
+  align-content: space-between;
+  justify-content: space-between;
   flex-wrap: wrap;
 }
 
