--- a/UI/styles/main.css
+++ b/UI/styles/main.css
@@ -38,11 +38,16 @@ button[type="submit"]{
   border-radius: 15px;
   margin-left: 3px;
 }
-.label{
+.label {
   padding: 5px;
   color: #757575;
   font-size: 17px;
   font-weight: bold;
+}
+
+label{
+  padding: : 3px;
+  font-size: 17px;
 }
 
 .details{
