ft(populate ui with product details)

--- a/UI/styles/main.css
+++ b/UI/styles/main.css
@@ -346,6 +346,7 @@ header li{
 }
 
 .item{
+  display: none;
   margin: 10px;
   cursor: pointer;
 }
@@ -365,12 +366,11 @@ width: 220px;
 }
 .name-description{
   display: inline-block;
-  height: 49px;
+  height: auto;
   font-family:'Robofont-size: 17px;to Condensed', sans-serif;
   color: blue;
   margin: auto;
   line-height: 2.5ex;
-  height: 5ex; 
   font-size: 18px;
   overflow: hidden;
   text-align: center;
