ft(add records fetch)

--- a/src/styles/base/_main.scss
+++ b/src/styles/base/_main.scss
@@ -93,6 +93,9 @@ hr {
   border: 2px solid #BDBDBD;
 }
 
+.clickable {
+  cursor: pointer;
+}
 #dialog-background-window {
   display: none;
   z-index: 1;
