ft(add admin product delete)

--- a/src/styles/base/_main.scss
+++ b/src/styles/base/_main.scss
@@ -400,6 +400,7 @@ header {
   text-align: center;
   zoom: 0.8;
   -moz-transform: scale(0.8);
+  margin-bottom: 18px;
 }
 
 .detailed-description {
@@ -524,6 +525,7 @@ footer {
     text-align: center;
     zoom: 0.9;
     -moz-transform: scale(0.9);
+    margin-bottom: 20px;
   }
   .detailed-description {
     width: 500px;
