--- a/src/styles/base/_main.scss
+++ b/src/styles/base/_main.scss
@@ -289,6 +289,10 @@ header {
   background-repeat: no-repeat;
 }
 
+.profile-info .confirm {
+  width: 120px !important ;
+}
+
 .attendant-content {
   background: #f4f4f4;
   grid-column-start: 1;
