--- a/src/styles/base/_main.scss
+++ b/src/styles/base/_main.scss
@@ -303,6 +303,7 @@ header {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    margin-left: -30px;
   }
   li {
     margin: 8px;
@@ -319,10 +320,6 @@ header {
     color: #795548;
     font-family: sans-serif;
     font: bold 18px Arial;
-    border-top: 1px solid #CCCCCC;
-    border-right: 1px solid #333333;
-    border-bottom: 1px solid #333333;
-    border-left: 1px solid #CCCCCC;
   }
 }
 
